<resources>
    <string name="app_name">汇保险</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="telphone">手机号</string>
    <string name="VerificationCode">短信验证码</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="agreement">已阅读并同意</string>
    <string name="agreementProtocal">《汇保险注册协议》</string>
    <string name="login">立即登录</string>
    <string name="processTime">重发(%1$s秒)</string>
    <string name="passwordlogin">密码登录</string>
    <string name="passworddetail">请输入密码(6-20位数字、字母组合)</string>
    <string name="regist">立即注册</string>
    <string name="gologin">已有账号,去登录</string>
    <string name="iregist">我要注册</string>
    <string name="home_home">首页</string>
    <string name="home_mall">商城</string>
    <string name="home_find">发现</string>
    <string name="home_class">课堂</string>
    <string name="home_mine">我</string>
    <string name="recommend">爆款推荐</string>
    <string name="activit">优选活动</string>
    <string name="topiclist">专题列表</string>

    <string name="condition_price">价格排序</string>
    <string name="condition_sale">销量排序</string>
    <string name="condition_filter">筛选</string>
    <string name="searchproduct">搜索产品</string>
    <string name="howPrice">￥ %1$s</string>
    <string name="hotsearch">热门搜索</string>
    <string name="lishisearch">历史搜索</string>
    <string name="qk">清空</string>

    <string name="hintphone">请输入手机号码</string>
    <string name="otherlogin">其他登录方式</string>
    <string name="hasaccount">已有账号,去登录</string>

    <string name="myOrder">我的订单</string>
    <string name="perInsure">个险保障</string>
    <string name="carInsure">车险保障</string>
    <string name="myAsset">我的资产</string>
    <string name="turnToMoney">提现</string>
    <string name="canCash">可提现</string>
    <string name="leftMoney">余额</string>
    <string name="score">积分</string>
    <string name="redPacket">红包</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="yzmlogin">短信登录</string>
    <string name="losspsw">忘记密码</string>
    <string name="getpsw">找回密码</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="add">+</string>
    <string name="insureInfo">《投保须知》</string>
    <string name="insureItem">《保险条款》</string>
    <string name="withdraw">提现</string>
    <string name="withdraw_price">提现金额 (元) :</string>
    <string name="all_withdraw">全部提现</string>
    <string name="detail_withdraw">可提现%1$s元\t\t本月还可以免费提现%2$s次</string>
    <string name="detail_withdraw2">您本月若超出提现次数,继续提现需要扣除%1$s元/次手续费</string>
    <string name="withdraw_btn">立即提现</string>
    <string name="snack_exit_once_more">再按一次退出项目</string>

    <string name="share">分享</string>
    <string name="ibuy">我要投保</string>
    <string name="more_features">查看更多特色</string>
    <string name="protection_list">保障清单</string>
    <string name="insured">投保人信息</string>
    <string name="insurer">投保人</string>
    <string name="pleaseinsured">请输入投保人姓名</string>
    <string name="certificatetype">证件类型</string>
    <string name="tel">手机号码</string>
    <string name="beinsured">被保人信息</string>
    <string name="certificate">证件号码</string>
    <string name="hinid">请输入证件号码</string>
    <string name="idcard">身份证</string>
    <string name="relation">与投保人关系</string>
    <string name="beinsurer">被保人</string>
    <string name="please_beinsurer">请输入被保人姓名</string>
    <string name="protectiontime">保障时间</string>
    <string name="girl">女</string>
    <string name="protectionsex">被保人性别</string>
    <string name="dateofbirth">出生日期</string>
    <string name="please">请选择</string>
    <string name="buyquantity">购买份数</string>
    <string name="insurance">保险受益人为法定受益人</string>
    <string name="claims_process">理赔流程</string>
    <string name="agreement2">我已阅读《投保须知》《保险条款》《健康告知》\n并同意上述协议约定</string>
    <string name="more_protection">查看保障详情</string>
    <string name="xlmatch">销量\t%1$s份</string>
    <string name="more_bzfeatures">查看保障详情</string>
    <string name="share2">分享后推广费不可见</string>
    <string name="wxhy">微信好友</string>
    <string name="wxpyq">微信朋友圈</string>
    <string name="qqhy">QQ好友</string>
    <string name="cancl">取消</string>
    <string name="filter">筛选</string>
    <string name="insureplan">选择投保方案</string>
    <string name="confim">确定</string>
    <string name="orderdetail">订单详情</string>
    <string name="bdxx">保单信息</string>
    <string name="ddzt">订单状态 : </string>
    <string name="ddh">订单号 : </string>
    <string name="qbsj">起保时间 : </string>
    <string name="zzsj">终止时间 : </string>
    <string name="bdyjdz">保单邮寄地址</string>
    <string name="sjr">收件人 : </string>
    <string name="lxdh">联系电话 : </string>
    <string name="dz">地址 : </string>
    <string name="clxx">车辆信息</string>
    <string name="cp">车牌 : </string>
    <string name="cz">车主 : </string>
    <string name="zjhm">证件号码 : </string>
    <string name="sendmessage">发送给客户</string>
    <string name="confimpay">确认支付</string>
    <string name="confimpay1">请在%1$s时%2$s分%3$s秒内完成支付,逾期将自动取消订单</string>
    <string name="orderprice">订单总价 : </string>
    <string name="hbdk">红包抵扣</string>
    <string name="rxzf">仍需支付</string>
    <string name="selectpay">选择支付方式</string>
    <string name="zfbzf">支付宝支付</string>
    <string name="wxzf">微信支付</string>
    <string name="hj">合计 : </string>
    <string name="ysprice">(已省￥%1$s)</string>
    <string name="name">姓名 : </string>
    <string name="cpxq">产品详情 : </string>
    <string name="idtype">证件类型 : </string>
    <string name="idnumber">证件号码 : </string>
    <string name="bznr">保障内容</string>
    <string name="bzxq">保障详情</string>
    <string name="bxzr">保险责任 : </string>
    <string name="bfze">保费总额</string>
    <string name="bxx">保险项</string>
    <string name="bf">保费总额</string>
    <string name="jqx">交强险 : </string>
    <string name="syx">商业险 : </string>
    <string name="hbdk1">- 红包抵扣</string>
    <string name="yedk1">- 余额抵扣</string>
    <string name="sfje">实付金额</string>
    <string name="zcgm">再次购买</string>
    <string name="syr">受益人 : 法定受益人</string>
    <string name="qbsj2">起保时间</string>
    <string name="selectcar">选择车型</string>
    <string name="newcarprice">新车参考价 : </string>

    <string name="others">君威\t\t别克牌POLO1.6轿车手自一体</string>
    <string name="format_jf">可用%1$s积分抵扣￥%2$s</string>
    <string name="format_ye">余额可抵扣￥%1$s</string>
    <string name="useacoupon">使用优惠券</string>
    <string name="fomartprice">价格格式不对</string>
    <string name="bxzr2">保险责任</string>
    <string name="be">保额</string>
    <string name="dk">-%1$s抵扣</string>
    <string name="pay">支付</string>
    <string name="tip2">温馨提示：本产品由%1$s股份有限公司承保\n联系电话:%2$s</string>
    <string name="password2">请输入支付密码</string>
    <string name="losspsw2">忘记密码？</string>
    <string name="setting2">使用余额抵扣需要设置支付密码</string>
    <string name="next2">下次吧</string>
    <string name="setting3">去设置</string>
    <string name="tbcs">投保城市</string>
    <string name="tbcs1">投保城市 : </string>
    <string name="cphm">车牌号码</string>
    <string name="cphm2">请输入车牌号码</string>
    <string name="xcwsp">新车未上牌</string>
    <string name="lscxcl">历史查询车辆</string>
    <string name="search">查询</string>
    <string name="updateperson">升级成签约代理人</string>
    <string name="selectcar2">请选择与您车辆最匹配的车型</string>
    <string name="nocar">不是以上车型</string>
    <string name="update_jqx">交强险调整</string>
    <string name="update_syx">商业险调整</string>
    <string name="bjmp">不计免赔</string>
    <string name="jqx2">交强险</string>
    <string name="jdcssx">机动车损失险</string>
    <string name="dszzrx">第三者责任险</string>

    <!-- behavior -->

    <string name="ToolbarAlphaBehavior">com.bb.hbx.behavior.ToolbarAlphaBehavior</string>
    <string name="SearchViewAlphaBehavior">com.bb.hbx.behavior.SearchViewAlphaBehavior</string>
</resources>
