<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

   >

    <com.bb.hbx.widget.ItemLayout
        android:id="@+id/il_insurer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/pleaseinsured"
        app:isCheck="false"
        app:isEdit="true"
        app:isright_icon="true"
        app:left_name="@string/insurer"
        app:right_butIcon="@drawable/tianjialianxiren"
        app:right_icon="@drawable/tianjialianxiren">

    </com.bb.hbx.widget.ItemLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x36">

        <include layout="@layout/line_e" />
    </LinearLayout>

    <com.bb.hbx.widget.ItemLayout
        android:id="@+id/il_insurer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/certificatetype"
        app:isCheck="true"
        app:isEdit="false"
        app:isright_icon="true"
        app:left_name="@string/certificatetype"
        app:right_butIcon="@drawable/xialaicon_xiangshang"
        app:right_icon="@drawable/xialaicon"
        app:text="@string/idcard">

    </com.bb.hbx.widget.ItemLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x36">

        <include layout="@layout/line_e" />
    </LinearLayout>

    <com.bb.hbx.widget.ItemLayout
        android:id="@+id/il_insurer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/hinid"
        app:isCheck="false"
        app:isEdit="true"
        app:isright_icon="false"
        app:left_name="@string/certificate"
        app:right_icon="@drawable/xialaicon">

    </com.bb.hbx.widget.ItemLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x36">

        <include layout="@layout/line_e" />
    </LinearLayout>

    <com.bb.hbx.widget.ItemLayout
        android:id="@+id/il_insurer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/hintphone"
        app:isCheck="false"
        app:isEdit="true"
        app:isright_icon="false"
        app:left_name="@string/tel"
        app:right_icon="@drawable/xialaicon">

    </com.bb.hbx.widget.ItemLayout>


</merge>

