<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiy.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x50"
        android:paddingRight="@dimen/x50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y100"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <com.bb.hbx.widget.LoginTelEdit
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:edit_endDrawable="@mipmap/ic_launcher"
                android:hint="@string/telphone"
                android:maxLines="11"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/VerificationCode"
                android:maxLines="8"
                android:singleLine="true" />

            <TextView

                android:id="@+id/tv_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="-30dp"
                android:text="@string/getVerificationCode" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/ck_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_login"
            android:layout_marginTop="@dimen/y50"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:gravity="center"
            android:background="@drawable/shape_b"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_marginTop="@dimen/y30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_line"
                android:layout_width="1dp"
                android:layout_height="@dimen/y20"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"/>

            <TextView
                android:padding="5dp"
                android:layout_marginRight="@dimen/x50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/img_line"
                android:text="@string/passwordlogin"
                android:id="@+id/tv_passwordlogin" />

            <TextView
                android:padding="5dp"
                android:id="@+id/tv_regist"
                android:layout_marginLeft="@dimen/x50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_line"
                android:text="@string/iregist"/>

        </RelativeLayout>

    </LinearLayout>



</ScrollView>
