<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x658"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y60"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/x36"
        android:paddingRight="@dimen/x36"
        android:text="@string/setting2"
        android:textAppearance="@style/TextAppear.Theme.A3_Size14" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y60">

        <include layout="@layout/line_e" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/next2"
            android:textAppearance="@style/TextAppear.Theme.A1_Size18" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/A6">

        </LinearLayout>

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting3"
            android:textAppearance="@style/TextAppear.Theme.A1_Size18" />

    </LinearLayout>


</LinearLayout>
